@@ -1,8 +1,0 @@
-<?xml version="1.0" standalone="no"?> <!--*- mode: xml -*-->
-<!DOCTYPE glade-project SYSTEM "http://glade.gnome.org/glade-project-2.0.dtd">
-
-<glade-project>
-  <name></name>
-  <program_name></program_name>
-  <gnome_support>TRUE</gnome_support>
-</glade-project>
